# codex_with_cursor

./: .gitignore  AGENTS.md  AI_INSTALL.md  README.md  install_codex_with_cc.ps1  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: test.yml
blog/: codex_with_cc_blog.md
codex_with_cc/: CODEX_WITH_CC.md
codex_with_cc/scripts/: runtime.py
codex_with_cc/windows_scripts/: delegate_to_claude.ps1  run_real_delegate_chain_validation.ps1  test_delegate_runtime.ps1  verify_delegate_artifacts.ps1
docs/: plugin-layout.md
hooks/: hooks.json  subagent-gate-hook.mjs
skills/codex-with-cursor-dispatching/: SKILL.md
skills/codex-with-cursor-finishing/: SKILL.md
skills/codex-with-cursor-planning/: SKILL.md
skills/codex-with-cursor-reviewing/: SKILL.md
skills/codex-with-cursor-worker/: SKILL.md
tests/: task_helpers.py  test_ai_install_doc.ps1  test_ai_install_doc.py  test_build_hook_smoke.py  test_codex_with_cursor_skill.py  test_contract_source.py  test_cursor_agent_cli_smoke.py  test_delegate_artifact_edge_contracts.py  test_delegate_long_prompt_stdin.py  test_delegate_prompt_and_real_chain_contract.py  test_delegate_runtime_selftest.py  test_delegate_session_pool_selftest.py  test_delegate_status_throttle.py  test_install_codex_with_cc.ps1  test_install_codex_with_cc.py  test_io_utils_write_json_retry.py  test_marketplace_manifest.py  test_platform_hooks.py  test_plugin_manifests.py  test_repo_install_paths.py  test_superpowers_workflow_overhaul.py  test_windows_wrapper_forwarding.py  test_workflow_contract.py
(+24 files in other folders)
